--- a/static/skeleton/skeleton.css
+++ b/static/skeleton/skeleton.css
@@ -125,7 +125,7 @@ body {
   font-size: 1.5em !important; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6 !important;
   font-weight: 400 !important;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", "Harlow Solid Italic" Helvetica, Arial, sans-serif !important;
   color: #222 !important; }
 
 
@@ -151,6 +151,8 @@ h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
   h5 { font-size: 2.4rem; }
   h6 { font-size: 1.5rem; }
 }
+
+
 
 p {
   margin-top: 0 !important; }
